# first_project

./: CMakeLists.txt  mian.cpp  myMath.h  source.cpp
